--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.BBsRs.horoscopefree"
-    android:versionCode="21"
-    android:versionName="5.0.3 Final" 
+    android:versionCode="22"
+    android:versionName="5.1 Beta" 
     android:installLocation="auto" >
 
     <uses-sdk
@@ -15,7 +15,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/MyThemeHoloLightOrangeDarkActionBar" >
+        android:theme="@style/Horoscope_v5" >
         <activity
             android:name="com.BBsRs.horoscopefree.ActivitySettings"
             android:label="@string/app_name" android:configChanges="keyboard|orientation|screenSize"></activity>
