--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,13 +37,13 @@
             </intent-filter>
             <meta-data android:resource="@xml/app_widget" android:name="android.appwidget.provider" android:value="true"/>
         </receiver>
-        <!-- 
+        
          <receiver android:name="com.BBsRs.horoscopefree.appWidgetProviderTomorrow" android:enabled="true" android:label="@string/widget_tommorow">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
             <meta-data android:resource="@xml/app_widget" android:name="android.appwidget.provider" android:value="true"/>
-        </receiver> -->
+        </receiver>
     </application>
 
 </manifest>
