--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:targetSdkVersion="17" />
     <uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="com.android.vending.BILLING" />
 
     <application
         android:allowBackup="true"
@@ -19,7 +20,7 @@
         <activity
             android:name="com.BBsRs.horoscopefree.ActivitySettings"
             android:label="@string/app_name" android:configChanges="keyboard|orientation|screenSize"></activity>
-        <activity android:name="com.BBsRs.horoscopefree.ActivityResultPage" android:configChanges="keyboard|orientation|screenSize"></activity>
+        
         <activity android:name="com.BBsRs.horoscopefree.ActivityLoader" android:configChanges="keyboard|orientation|screenSize" android:theme="@style/Holo.Theme.Light.NoActionBar">
              <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,10 +28,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <activity android:name="com.BBsRs.horoscopefree.ActivityLoaderVersion"></activity>
         <activity android:name="com.BBsRs.horoscopefree.ActivityHoroSettings1"></activity>
         <activity android:name="com.BBsRs.horoscopefree.ActivityHoroSettings2"></activity>
         <activity android:name="com.BBsRs.horoscopefree.ActivityHoroSettings3"></activity>
+        <activity android:name="ActivityAgreement"></activity>
+        <activity android:name="ActivityInAppBilling"></activity>
+        <activity android:name="com.BBsRs.horoscopefree.ActivityResultPage" android:configChanges="keyboard|orientation|screenSize"></activity>
+        
         <receiver android:name="com.BBsRs.horoscopefree.appWidgetProvider" android:enabled="true" android:label="@string/widget_today">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
@@ -44,7 +50,7 @@
             </intent-filter>
             <meta-data android:resource="@xml/app_widget" android:name="android.appwidget.provider" android:value="true"/>
         </receiver>
-         <activity android:name="ActivityAgreement"></activity>
+         
     </application>
 
 </manifest>
