--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,10 +18,10 @@
         android:label="@string/app_name"
         android:theme="@style/Horoscope_v5" >
         <activity
-            android:name="com.BBsRs.horoscopefree.ActivitySettings"
+            android:name="com.BBsRs.horoscopenew.ActivitySettings"
             android:label="@string/app_name" android:configChanges="keyboard|orientation|screenSize"></activity>
         
-        <activity android:name="com.BBsRs.horoscopefree.ActivityLoader" android:configChanges="keyboard|orientation|screenSize" android:theme="@style/Holo.Theme.Light.NoActionBar">
+        <activity android:name="com.BBsRs.horoscopenew.ActivityLoader" android:configChanges="keyboard|orientation|screenSize" android:theme="@style/Holo.Theme.Light.NoActionBar">
              <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,22 +29,22 @@
             </intent-filter>
         </activity>
         
-        <activity android:name="com.BBsRs.horoscopefree.ActivityLoaderVersion"></activity>
-        <activity android:name="com.BBsRs.horoscopefree.ActivityHoroSettings1"></activity>
-        <activity android:name="com.BBsRs.horoscopefree.ActivityHoroSettings2"></activity>
-        <activity android:name="com.BBsRs.horoscopefree.ActivityHoroSettings3"></activity>
-        <activity android:name="com.BBsRs.horoscopefree.ActivityAgreement"></activity>
-        <activity android:name="com.BBsRs.horoscopefree.ActivityInAppBilling"></activity>
-        <activity android:name="com.BBsRs.horoscopefree.ActivityResultPage" android:configChanges="keyboard|orientation|screenSize"></activity>
+        <activity android:name="com.BBsRs.horoscopenew.ActivityLoaderVersion"></activity>
+        <activity android:name="com.BBsRs.horoscopenew.ActivityHoroSettings1"></activity>
+        <activity android:name="com.BBsRs.horoscopenew.ActivityHoroSettings2"></activity>
+        <activity android:name="com.BBsRs.horoscopenew.ActivityHoroSettings3"></activity>
+        <activity android:name="com.BBsRs.horoscopenew.ActivityAgreement"></activity>
+        <activity android:name="com.BBsRs.horoscopenew.ActivityInAppBilling"></activity>
+        <activity android:name="com.BBsRs.horoscopenew.ActivityResultPage" android:configChanges="keyboard|orientation|screenSize"></activity>
         
-        <receiver android:name="com.BBsRs.horoscopefree.appWidgetProvider" android:enabled="true" android:label="@string/widget_today">
+        <receiver android:name="com.BBsRs.horoscopenew.appWidgetProvider" android:enabled="true" android:label="@string/widget_today">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
             <meta-data android:resource="@xml/app_widget" android:name="android.appwidget.provider" android:value="true"/>
         </receiver>
         
-         <receiver android:name="com.BBsRs.horoscopefree.appWidgetProviderTomorrow" android:enabled="true" android:label="@string/widget_tommorow">
+         <receiver android:name="com.BBsRs.horoscopenew.appWidgetProviderTomorrow" android:enabled="true" android:label="@string/widget_tommorow">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
