--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.BBsRs.horoscopenew"
+    package="com.BBsRs.horoscopeFullNew"
     android:versionCode="25"
     android:versionName="5.1.3 final" 
     android:installLocation="auto" >
@@ -18,10 +18,10 @@
         android:label="@string/app_name"
         android:theme="@style/Horoscope_v5" >
         <activity
-            android:name="com.BBsRs.horoscopenew.ActivitySettings"
+            android:name="com.BBsRs.horoscopeFullNew.ActivitySettings"
             android:label="@string/app_name" android:configChanges="keyboard|orientation|screenSize"></activity>
         
-        <activity android:name="com.BBsRs.horoscopenew.ActivityLoader" android:configChanges="keyboard|orientation|screenSize" android:theme="@style/Holo.Theme.Light.NoActionBar">
+        <activity android:name="com.BBsRs.horoscopeFullNew.ActivityLoader" android:configChanges="keyboard|orientation|screenSize" android:theme="@style/Holo.Theme.Light.NoActionBar">
              <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,21 +29,21 @@
             </intent-filter>
         </activity>
         
-        <activity android:name="com.BBsRs.horoscopenew.ActivityLoaderVersion"></activity>
-        <activity android:name="com.BBsRs.horoscopenew.ActivityHoroSettings1"></activity>
-        <activity android:name="com.BBsRs.horoscopenew.ActivityHoroSettings2"></activity>
-        <activity android:name="com.BBsRs.horoscopenew.ActivityHoroSettings3"></activity>
-        <activity android:name="com.BBsRs.horoscopenew.ActivityAgreement"></activity>
-        <activity android:name="com.BBsRs.horoscopenew.ActivityResultPage" android:configChanges="keyboard|orientation|screenSize"></activity>
+        <activity android:name="com.BBsRs.horoscopeFullNew.ActivityLoaderVersion"></activity>
+        <activity android:name="com.BBsRs.horoscopeFullNew.ActivityHoroSettings1"></activity>
+        <activity android:name="com.BBsRs.horoscopeFullNew.ActivityHoroSettings2"></activity>
+        <activity android:name="com.BBsRs.horoscopeFullNew.ActivityHoroSettings3"></activity>
+        <activity android:name="com.BBsRs.horoscopeFullNew.ActivityAgreement"></activity>
+        <activity android:name="com.BBsRs.horoscopeFullNew.ActivityResultPage" android:configChanges="keyboard|orientation|screenSize"></activity>
         
-        <receiver android:name="com.BBsRs.horoscopenew.appWidgetProvider" android:enabled="true" android:label="@string/widget_today">
+        <receiver android:name="com.BBsRs.horoscopeFullNew.appWidgetProvider" android:enabled="true" android:label="@string/widget_today">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
             <meta-data android:resource="@xml/app_widget" android:name="android.appwidget.provider" android:value="true"/>
         </receiver>
         
-         <receiver android:name="com.BBsRs.horoscopenew.appWidgetProviderTomorrow" android:enabled="true" android:label="@string/widget_tommorow">
+         <receiver android:name="com.BBsRs.horoscopeFullNew.appWidgetProviderTomorrow" android:enabled="true" android:label="@string/widget_tommorow">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
