fix error launch on android 2.3 and above, adding stuff to share function

--- a/project.properties
+++ b/project.properties
@@ -15,4 +15,4 @@ target=android-19
 android.library.reference.1=..\\HoloEverywhere
 android.library.reference.2=..\\HoloEverywhereSlider
 android.library.reference.3=..\\HoloEverywherePreferences
-android.library.reference.4=../ActionBarPullToRefresh
+android.library.reference.4=../ActionBarPullToRefreshCompat
