--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Holo.Horoscope.Theme.Light.DarkActionBar" 
+        android:theme="@style/HoloPinkLightDarkActionBar" 
         android:name="org.holoeverywhere.app.Application">
         <activity
             android:name=".ContentShowActivity"
