--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.BBsRs.horoscopeFullNew"
+    android:installLocation="auto"
     android:versionCode="30"
-    android:versionName="6.0beta"
-    android:installLocation="auto" >
-    
+    android:versionName="6.0beta" >
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="org.holoeverywhere.app.Application"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/HoloPinkLightDarkActionBar" 
-        android:name="org.holoeverywhere.app.Application">
+        android:theme="@style/HoloPinkLightDarkActionBar" >
         <activity
             android:name=".ContentShowActivity"
+            android:configChanges="locale"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
