--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,11 +21,26 @@
             android:name=".ContentShowActivity"
             android:configChanges="locale"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.BBsRs.horoscopeFullNew.ActivityLoader"
+            android:configChanges="locale"
+            android:label="@string/app_name" android:theme="@style/HoloPinkDarkActionBarFullScreenNoActionBar">
+        </activity>
+                <activity
+            android:name="com.BBsRs.horoscopeFullNew.Introduce.IntroduceActivityOne"
+            android:configChanges="locale"
+            android:label="@string/app_name" android:theme="@style/HoloPinkDarkActionBarFullScreenNoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.BBsRs.horoscopeFullNew.Introduce.IntroduceActivityOne"
+            android:configChanges="locale"
+            android:label="@string/app_name" android:theme="@style/HoloPinkDarkActionBarFullScreenNoActionBar">
         </activity>
     </application>
 
