--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,12 +25,14 @@
         <activity
             android:name="com.BBsRs.horoscopeFullNew.ActivityLoader"
             android:configChanges="locale"
-            android:label="@string/app_name" android:theme="@style/HoloPinkDarkActionBarFullScreenNoActionBar">
+            android:label="@string/app_name"
+            android:theme="@style/HoloPinkDarkActionBarFullScreenNoActionBar" >
         </activity>
-                <activity
+        <activity
             android:name="com.BBsRs.horoscopeFullNew.Introduce.IntroduceActivityOne"
             android:configChanges="locale"
-            android:label="@string/app_name" android:theme="@style/HoloPinkDarkActionBarFullScreenNoActionBar">
+            android:label="@string/app_name"
+            android:theme="@style/HoloPinkDarkActionBarFullScreenNoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,9 +40,28 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.BBsRs.horoscopeFullNew.Introduce.IntroduceActivityOne"
+            android:name="com.BBsRs.horoscopeFullNew.Introduce.IntroduceActivityTwo"
             android:configChanges="locale"
-            android:label="@string/app_name" android:theme="@style/HoloPinkDarkActionBarFullScreenNoActionBar">
+            android:label="@string/app_name"
+            android:theme="@style/HoloPinkDarkActionBarFullScreenNoActionBar" >
+        </activity>
+        <activity
+            android:name="com.BBsRs.horoscopeFullNew.Introduce.IntroduceActivityThree"
+            android:configChanges="locale"
+            android:label="@string/app_name"
+            android:theme="@style/HoloPinkDarkActionBarFullScreenNoActionBar" >
+        </activity>
+        <activity
+            android:name="com.BBsRs.horoscopeFullNew.Introduce.IntroduceActivityFour"
+            android:configChanges="locale"
+            android:label="@string/app_name"
+            android:theme="@style/HoloPinkDarkActionBarFullScreenNoActionBar" >
+        </activity>
+        <activity
+            android:name="com.BBsRs.horoscopeFullNew.Introduce.IntroduceActivityFive"
+            android:configChanges="locale"
+            android:label="@string/app_name"
+            android:theme="@style/HoloPinkDarkActionBarFullScreenNoActionBar" >
         </activity>
     </application>
 
