--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Holo.Theme.Light.DarkActionBar" >
+        android:theme="@style/Holo_Theme_Light_PinkActionBar" >
         <activity
             android:name=".ContentShowActivity"
             android:configChanges="locale"
