--- a/project.properties
+++ b/project.properties
@@ -16,5 +16,4 @@ android.library.reference.1=..\\HoloEverywhere
 android.library.reference.2=..\\HoloEverywherePreferences
 android.library.reference.3=..\\ActionBarPullToRefreshCompat
 android.library.reference.4=..\\ActionBarPullToRefresh
-android.library.reference.5=..\\HoloEverywhereSlider
-android.library.reference.6=../GooglePlaySevices
+android.library.reference.5=../HoloEverywhereSlider
