--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -84,6 +84,7 @@
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize|locale" />
+        <activity android:name="PurchaseDialogActivity"></activity>
     </application>
 
 </manifest>
