--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.BBsRs.horoscopeFullNew"
+    package="com.BBsRs.horoscopeNewEdition"
     android:installLocation="auto"
     android:versionCode="36"
     android:versionName="6.1.5" >
@@ -24,7 +24,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".ContentShowActivity"
+            android:name="com.BBsRs.horoscopeFullNew.ContentShowActivity"
             android:configChanges="locale"
             android:label="@string/app_name" >
         </activity>
@@ -84,7 +84,7 @@
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize|locale" />
-        <activity android:name="PurchaseDialogActivity"></activity>
+        <activity android:name="com.BBsRs.horoscopeFullNew.PurchaseDialogActivity"></activity>
     </application>
 
 </manifest>
