--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -55,7 +55,7 @@
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize|locale" />
 
-        <service android:name="NotificationService" >
+        <service android:name="com.BBsRs.horoscopeNewEdition.NotificationService" >
         </service>
     </application>
 
