--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity
             android:name="com.BBsRs.horoscopeFullNew.ContentShowActivity"
             android:configChanges="locale"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleInstance" >
         </activity>
         <activity
             android:name="com.BBsRs.horoscopeFullNew.ActivityLoader"
