--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name="com.BBsRs.horoscopeFullNew.ContentShowActivity"
             android:configChanges="locale"
             android:label="@string/app_name"
-            android:launchMode="singleInstance" android:theme="@style/ContentTheme">
+            android:theme="@style/ContentTheme" >
         </activity>
         <activity
             android:name="com.BBsRs.horoscopeFullNew.ActivityLoader"
@@ -57,7 +57,9 @@
 
         <activity android:name="com.BBsRs.horoscopeNewEdition.ActivityRestarter" >
         </activity>
-        <activity android:name="com.BBsRs.horoscopeFullNew.Introduce.IntroduceActivityNewTheme" android:theme="@style/ContentTheme">
+        <activity
+            android:name="com.BBsRs.horoscopeFullNew.Introduce.IntroduceActivityNewTheme"
+            android:theme="@style/ContentTheme" >
         </activity>
     </application>
 
