--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:name="com.BBsRs.horoscopeFullNew.ContentShowActivity"
             android:configChanges="locale"
             android:label="@string/app_name"
+            android:launchMode="singleTask"
             android:theme="@style/ContentTheme" >
         </activity>
         <activity
