--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/ContentTheme" >
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name="com.BBsRs.horoscopeFullNew.ContentShowActivity"
             android:configChanges="locale"
@@ -55,6 +59,10 @@
             android:name="com.BBsRs.horoscopeFullNew.Introduce.IntroduceActivityNewTheme"
             android:theme="@style/ContentTheme" >
         </activity>
+        
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize|locale" />
     </application>
 
 </manifest>
