new libraries dipendicies rules

--- a/project.properties
+++ b/project.properties
@@ -12,9 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=..\\HoloEverywhere
-android.library.reference.2=..\\HoloEverywherePreferences
-android.library.reference.3=..\\ActionBarPullToRefreshCompat
-android.library.reference.4=..\\ActionBarPullToRefresh
-android.library.reference.5=..\\HoloEverywhereSlider
-android.library.reference.6=../GooglePlayServices
+android.library.reference.1=..\\ActionBarPullToRefreshCompat
+android.library.reference.2=..\\GooglePlayServices
