--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:name="com.BBsRs.horoscopeNewEdition.Base.BaseApplication"
@@ -23,13 +24,23 @@
         </activity>
         <activity
             android:name=".LoaderActivity"
-            android:label="@string/app_name" android:theme="@style/SplashScreenTheme">
+            android:label="@string/app_name"
+            android:theme="@style/SplashScreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name=".Services.NotificationService" >
+        </service>
+
+        <receiver android:name=".Services.BootUpReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
