--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,10 +20,13 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/ContentTheme" >
-        <activity android:name=".ContentActivity" >
+        <activity
+            android:name=".ContentActivity"
+            android:configChanges="locale" >
         </activity>
         <activity
             android:name=".LoaderActivity"
+            android:configChanges="locale"
             android:label="@string/app_name"
             android:theme="@style/SplashScreenTheme" >
             <intent-filter>
